<resources>
    <string name="app_name">Side Menu</string>
    <string name="name">"Alyssa "</string>
    <string name="email">alyssanjknk1231@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="deals">Deals</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="header">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>